Разметил промо слайдер

--- a/index.html
+++ b/index.html
@@ -37,7 +37,46 @@
 		</div>
 	</header>
 	<main>
-
+		<div class="w-container">
+			<div class="promo-slider">
+				<div class="promo-slider-slide">
+					<img class="promo-slider-img" src="" alt="Крутой монопод">
+					<div class="promo-slider-item-right-side">
+						<h2 class="promo-slider-item-heading">Делай селфи, как Бен Стиллер!</h2>
+						<p class="promo-slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+						<a class="promo-slider-about-link" href="#">Подробнее</a>
+						<div class="promo-slider-item-features">
+							<span class="promo-slider-feature">8,5 м<span class="feature-description">Длина палки</span></span>
+							<span class="promo-slider-feature">5 кг<span class="feature-description">Вес палки</span></span>
+							<span class="promo-slider-feature">Карбон<span class="feature-description">Материал</span></span>
+						</div>
+					</div>
+				</div>
+				<div class="promo-slider-slide">
+					<img class="promo-slider-img" src="" alt="Крутой фитнес-браслет">
+					<div class="promo-slider-item-right-side">
+						<h2 class="promo-slider-item-heading">Худеем правильно!</h2>
+						<p class="promo-slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+						<a class="promo-slider-about-link" href="#">Подробнее</a>
+						<div class="promo-slider-item-features">
+							<span class="promo-slider-feature">48 часов<span class="feature-description">Без подзарядки</span></span>
+						</div>
+					</div>
+				</div>
+				<div class="promo-slider-slide">
+					<img class="promo-slider-img" src="" alt="Крутой квадрокоптер">
+					<div class="promo-slider-item-right-side">
+						<h2 class="promo-slider-item-heading">Порхает как бабочка, жалит как пчела!</h2>
+						<p class="promo-slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+						<a class="promo-slider-about-link" href="#">Подробнее</a>
+						<div class="promo-slider-item-features">
+							<span class="promo-slider-feature">800 м<span class="feature-description">Дальность полета</span></span>
+							<span class="promo-slider-feature">50 м<span class="feature-description">Радиус поражения</span></span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
 	<footer>
 
