--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 	</header>
 	<main>
 		<div class="w-container">
-			<div class="promo-slider">
+			<div class="promo-slider-wrapper">
 				<div class="promo-slider-slide">
 					<img class="promo-slider-img" src="" alt="Крутой монопод">
-					<div class="promo-slider-item-right-side">
+					<section class="promo-slider-item-right-side">
 						<h2 class="promo-slider-item-heading">Делай селфи, как Бен Стиллер!</h2>
 						<p class="promo-slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
 						<a class="promo-slider-about-link" href="#">Подробнее</a>
@@ -50,22 +50,22 @@
 							<span class="promo-slider-feature">5 кг<span class="feature-description">Вес палки</span></span>
 							<span class="promo-slider-feature">Карбон<span class="feature-description">Материал</span></span>
 						</div>
-					</div>
+					</section>
 				</div>
 				<div class="promo-slider-slide">
 					<img class="promo-slider-img" src="" alt="Крутой фитнес-браслет">
-					<div class="promo-slider-item-right-side">
+					<section class="promo-slider-item-right-side">
 						<h2 class="promo-slider-item-heading">Худеем правильно!</h2>
 						<p class="promo-slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
 						<a class="promo-slider-about-link" href="#">Подробнее</a>
 						<div class="promo-slider-item-features">
 							<span class="promo-slider-feature">48 часов<span class="feature-description">Без подзарядки</span></span>
 						</div>
-					</div>
+					</section>
 				</div>
 				<div class="promo-slider-slide">
 					<img class="promo-slider-img" src="" alt="Крутой квадрокоптер">
-					<div class="promo-slider-item-right-side">
+					<section class="promo-slider-item-right-side">
 						<h2 class="promo-slider-item-heading">Порхает как бабочка, жалит как пчела!</h2>
 						<p class="promo-slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
 						<a class="promo-slider-about-link" href="#">Подробнее</a>
@@ -73,8 +73,71 @@
 							<span class="promo-slider-feature">800 м<span class="feature-description">Дальность полета</span></span>
 							<span class="promo-slider-feature">50 м<span class="feature-description">Радиус поражения</span></span>
 						</div>
-					</div>
+					</section>
 				</div>
+			</div>
+			<div class="catalog">
+				<h2 class="visually-hidden">Каталог товаров</h2>
+				<ul class="category-list">
+					<li class="category-list-item"><a href="#">Виртуальная реальность</a></li>
+					<li class="category-list-item"><a href="#">Моноподы для селфи</a></li>
+					<li class="category-list-item"><a href="#">Экшн-камеры</a></li>
+					<li class="category-list-item"><a href="#">Фитнес-браслеты</a></li>
+					<li class="category-list-item"><a href="#">Умные часы</a></li>
+					<li class="category-list-item"><a href="#">Квадрокоптеры</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="services-slider-wrapper">
+			<div class="w-container">
+				<h2 class="visually-hidden">Сервисы</h2>
+				<ul class="services-list">
+					<li class="services-list-item"><a class="current-in-services" href="#">Доставка</a></li>
+					<li class="services-list-item"><a href="#">Гарантия</a></li>
+					<li class="services-list-item"><a href="#">Кредит</a></li>
+				</ul>
+				<section class="services-slide services-delivery show-services-slide">
+					<h2 class="services-slide-heading">Доставка</h2>
+					<p class="services-slide-descriprion">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+				</section>
+				<section class="services-slide services-warranty">
+					<h2 class="services-slide-heading">Гарантия</h2>
+					<p class="services-slide-descriprion">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+				</section>
+				<section class="services-slide services-credit">
+					<h2 class="services-slide-heading">Кредит</h2>
+					<p class="services-slide-descriprion">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+				</section>
+			</div>
+		</div>
+		<div class="w-container">
+			<div class="partners">
+				<h2 class="visually-hidden">Наши партнеры</h2>
+				<ul class="partners-list">
+					<li class="partners-list-item"><img src="" alt=""></li>
+					<li class="partners-list-item"><img src="" alt=""></li>
+					<li class="partners-list-item"><img src="" alt=""></li>
+					<li class="partners-list-item"><img src="" alt=""></li>
+				</ul>
+			</div>
+			<div class="about-and-contacts-wrapper">
+				<section class="about-company">
+					<h2>О нас</h2>
+					<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+					<p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+					<ul class="delivery-companies">
+						<li>Деловые линии</li>
+						<li>Автотрейдинг</li>
+						<li>ЖелДорЭкспедиция</li>
+					</ul>
+					<a class="button" href="#">Подробнее о нас</a>
+				</section>
+				<section class="contacts">
+					<h2>Контакты</h2>
+					<p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+					<a class="map-btn" href="#"><img src="" alt=""></a>
+					<a class="button" href="#">Напишите нам</a>
+				</section>
 			</div>
 		</div>
 	</main>
