--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 	<main>
 		<div class="w-container">
 			<div class="promo-slider-wrapper">
-				<div class="promo-slider-slide">
+				<div class="promo-slider-slide show-promo-slide">
 					<img class="promo-slider-img" src="" alt="Крутой монопод">
 					<section class="promo-slider-item-right-side">
 						<h2 class="promo-slider-item-heading">Делай селфи, как Бен Стиллер!</h2>
 						<p class="promo-slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-						<a class="promo-slider-about-link" href="#">Подробнее</a>
+						<a class="promo-slider-about-link button" href="#">Подробнее</a>
 						<div class="promo-slider-item-features">
 							<span class="promo-slider-feature">8,5 м<span class="feature-description">Длина палки</span></span>
 							<span class="promo-slider-feature">5 кг<span class="feature-description">Вес палки</span></span>
@@ -57,7 +57,7 @@
 					<section class="promo-slider-item-right-side">
 						<h2 class="promo-slider-item-heading">Худеем правильно!</h2>
 						<p class="promo-slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-						<a class="promo-slider-about-link" href="#">Подробнее</a>
+						<a class="promo-slider-about-link button" href="#">Подробнее</a>
 						<div class="promo-slider-item-features">
 							<span class="promo-slider-feature">48 часов<span class="feature-description">Без подзарядки</span></span>
 						</div>
@@ -68,7 +68,7 @@
 					<section class="promo-slider-item-right-side">
 						<h2 class="promo-slider-item-heading">Порхает как бабочка, жалит как пчела!</h2>
 						<p class="promo-slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-						<a class="promo-slider-about-link" href="#">Подробнее</a>
+						<a class="promo-slider-about-link button" href="#">Подробнее</a>
 						<div class="promo-slider-item-features">
 							<span class="promo-slider-feature">800 м<span class="feature-description">Дальность полета</span></span>
 							<span class="promo-slider-feature">50 м<span class="feature-description">Радиус поражения</span></span>
@@ -142,7 +142,28 @@
 		</div>
 	</main>
 	<footer>
-
+		<div class="w-container">
+			<ul class="user-navigation-footer">
+				<li class="user-navigation-footer-item"><a class="footer-logo" href="#"><img src="" alt=""></a></li>
+				<li class="user-navigation-footer-item"><a href="#">Войти</a></li>
+				<li class="user-navigation-footer-item"><a href="#">Сравнить</a></li>
+				<li class="user-navigation-footer-item"><a href="#">Корзина</a></li>
+			</ul>
+			<address class="footer-address">г. Москва, ул. Строителей, 15</address>
+			<ul class="footer-services-list">
+				<li class="footer-services-list-item"><a href="#">Доставка</a></li>
+				<li class="footer-services-list-item"><a href="#">Гарантия</a></li>
+				<li class="footer-services-list-item"><a href="#">Контакты</a></li>
+			</ul>
+			<span class="tel-number-footer">Тел.: +7 (495) 495-95-95</span>
+			<span class="line-footer"></span>
+			<ul class="social-list">
+				<li class="social-list-item social-fb"><a href="#"><span class="visually-hidden">Facebook</span></a></li>
+				<li class="social-list-item social-in"><a href="#"><span class="visually-hidden">Instagram</span></a></li>
+				<li class="social-list-item social-tw"><a href="#"><span class="visually-hidden">Twitter</span></a></li>
+			</ul>
+			<a href="#"><span class="visually-hidden">HTMLAcademy</span></a>
+		</div>
 	</footer>
 </body>
 </html>
