Начал разметку внутренней

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<nav class="main-navigation">
 				<form class="search-form" method="GET">
 					<input class="main-search" name="inpt-main-search" type="search" placeholder="Поиск по сайту">
+					<button class="btn-search" type="submit">Найти</button>
 				</form>
 				<ul class="user-navigation">
 					<li class="user-navigation-item"><a class="login-link" href="#">Войти</a></li>
