--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Device</title>
 </head>
 <body>
-	<header>
+	<header class="main-header">
 		<div class="w-container">
 			<a class="header-logo"><img src="" alt="Логотип Device"></a>
 			<nav class="main-navigation">
@@ -39,8 +39,11 @@
 	</header>
 	<main>
 		<div class="w-container">
+
+			<h1 class="visually-hidden">Магазин Device</h1>
+
 			<div class="promo-slider-wrapper">
-				<div class="promo-slider-slide show-promo-slide">
+				<div class="promo-slider-slides promo-slide-1 show-promo-slide">
 					<img class="promo-slider-img" src="" alt="Крутой монопод">
 					<section class="promo-slider-item-right-side">
 						<h2 class="promo-slider-item-heading">Делай селфи, как Бен Стиллер!</h2>
@@ -53,7 +56,7 @@
 						</div>
 					</section>
 				</div>
-				<div class="promo-slider-slide">
+				<div class="promo-slider-slides promo-slide-2">
 					<img class="promo-slider-img" src="" alt="Крутой фитнес-браслет">
 					<section class="promo-slider-item-right-side">
 						<h2 class="promo-slider-item-heading">Худеем правильно!</h2>
@@ -64,7 +67,7 @@
 						</div>
 					</section>
 				</div>
-				<div class="promo-slider-slide">
+				<div class="promo-slider-slides promo-slide-3">
 					<img class="promo-slider-img" src="" alt="Крутой квадрокоптер">
 					<section class="promo-slider-item-right-side">
 						<h2 class="promo-slider-item-heading">Порхает как бабочка, жалит как пчела!</h2>
@@ -77,7 +80,7 @@
 					</section>
 				</div>
 			</div>
-			<div class="catalog">
+			<section class="catalog">
 				<h2 class="visually-hidden">Каталог товаров</h2>
 				<ul class="category-list">
 					<li class="category-list-item"><a href="#">Виртуальная реальность</a></li>
@@ -87,7 +90,7 @@
 					<li class="category-list-item"><a href="#">Умные часы</a></li>
 					<li class="category-list-item"><a href="#">Квадрокоптеры</a></li>
 				</ul>
-			</div>
+			</section>
 		</div>
 		<div class="services-slider-wrapper">
 			<div class="w-container">
