--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
 						<h2 class="promo-slider-item-heading">Делай селфи, как Бен Стиллер!</h2>
 						<p class="promo-slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
-						<div class="promo-slider-item-features">
-							<span class="promo-slider-feature">8,5 м<span class="feature-description">Длина палки</span></span>
-							<span class="promo-slider-feature">5 кг<span class="feature-description">Вес палки</span></span>
-							<span class="promo-slider-feature">Карбон<span class="feature-description">Материал</span></span>
-						</div>
+						<dl class="promo-slider-item-features">
+							<dt class="promo-slider-feature">8,5 м</dt>
+								<dd class="feature-description">Длина палки</dd>
+							<dt class="promo-slider-feature">5 кг</dt>
+								<dd class="feature-description">Вес палки</dd>
+							<dt class="promo-slider-feature">Карбон</dt>
+								<dd class="feature-description">Материал</dd>
+						</dl>
 					</section>
 				</div>
 				<div class="promo-slider-slides promo-slide-2">
@@ -62,9 +65,10 @@
 						<h2 class="promo-slider-item-heading">Худеем правильно!</h2>
 						<p class="promo-slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
-						<div class="promo-slider-item-features">
-							<span class="promo-slider-feature">48 часов<span class="feature-description">Без подзарядки</span></span>
-						</div>
+						<dl class="promo-slider-item-features">
+							<dt class="promo-slider-feature">48 часов</dt>
+								<dd class="feature-description">Без подзарядки</dd>
+						</dl>
 					</section>
 				</div>
 				<div class="promo-slider-slides promo-slide-3">
@@ -73,10 +77,12 @@
 						<h2 class="promo-slider-item-heading">Порхает как бабочка, жалит как пчела!</h2>
 						<p class="promo-slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
-						<div class="promo-slider-item-features">
-							<span class="promo-slider-feature">800 м<span class="feature-description">Дальность полета</span></span>
-							<span class="promo-slider-feature">50 м<span class="feature-description">Радиус поражения</span></span>
-						</div>
+						<dl class="promo-slider-item-features">
+							<dt class="promo-slider-feature">800 м</dt>
+								<dd class="feature-description">Дальность полета</dd>
+							<dt class="promo-slider-feature">50 м</dt>
+								<dd class="feature-description">Радиус поражения</dd>
+						</dl>
 					</section>
 				</div>
 			</div>
