Поменял структуру заголовков

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 			<h1 class="visually-hidden">Магазин Device</h1>
 
 			<div class="promo-slider-wrapper">
+				<h2 class="visually-hidden">Лучшие товары</h2>
 				<div class="promo-slider-slides promo-slide-1 show-promo-slide">
 					<img class="promo-slider-img" src="" alt="Крутой монопод">
 					<section class="promo-slider-item-right-side">
-						<h2 class="promo-slider-item-heading">Делай селфи, как Бен Стиллер!</h2>
+						<h3 class="promo-slider-item-heading">Делай селфи, как Бен Стиллер!</h3>
 						<p class="promo-slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
 						<dl class="promo-slider-item-features">
@@ -62,7 +63,7 @@
 				<div class="promo-slider-slides promo-slide-2">
 					<img class="promo-slider-img" src="" alt="Крутой фитнес-браслет">
 					<section class="promo-slider-item-right-side">
-						<h2 class="promo-slider-item-heading">Худеем правильно!</h2>
+						<h3 class="promo-slider-item-heading">Худеем правильно!</h3>
 						<p class="promo-slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
 						<dl class="promo-slider-item-features">
@@ -74,7 +75,7 @@
 				<div class="promo-slider-slides promo-slide-3">
 					<img class="promo-slider-img" src="" alt="Крутой квадрокоптер">
 					<section class="promo-slider-item-right-side">
-						<h2 class="promo-slider-item-heading">Порхает как бабочка, жалит как пчела!</h2>
+						<h3 class="promo-slider-item-heading">Порхает как бабочка, жалит как пчела!</h3>
 						<p class="promo-slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
 						<dl class="promo-slider-item-features">
@@ -107,15 +108,15 @@
 					<li class="services-list-item"><a href="#">Кредит</a></li>
 				</ul>
 				<section class="services-slide services-delivery show-services-slide">
-					<h2 class="services-slide-heading">Доставка</h2>
+					<h3 class="services-slide-heading">Доставка</h3>
 					<p class="services-slide-descriprion">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
 				</section>
 				<section class="services-slide services-warranty">
-					<h2 class="services-slide-heading">Гарантия</h2>
+					<h3 class="services-slide-heading">Гарантия</h3>
 					<p class="services-slide-descriprion">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
 				</section>
 				<section class="services-slide services-credit">
-					<h2 class="services-slide-heading">Кредит</h2>
+					<h3 class="services-slide-heading">Кредит</h3>
 					<p class="services-slide-descriprion">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
 				</section>
 			</div>
