--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
 	<header class="main-header">
 		<div class="w-container">
-			<a class="header-logo"><img src="" alt="Логотип Device"></a>
+			<a class="header-logo"><img src="img/main-logo-header.svg" alt="Логотип Device"></a>
 			<nav class="main-navigation">
 				<form class="search-form" method="GET">
-					<input class="main-search" name="inpt-main-search" type="search" placeholder="Поиск по сайту">
+					<label class="search-icon" for="inpt-main-search"><span class="visually-hidden">Поиск</span></label>
+					<input class="main-search" type="search" name="inpt-main-search" id="inpt-main-search" placeholder="Поиск по сайту">
 					<button class="btn-search" type="submit">Найти</button>
 				</form>
 				<ul class="user-navigation">
@@ -23,7 +24,7 @@
 						<a href="#">Каталог товаров</a>
 						<ul class="site-navigation-2nd-nesting">
 							<li class="site-navigation-2nd-nesting-item"><a href="#">Виртуальная реальность</a></li>
-							<li class="site-navigation-2nd-nesting-item"><a href="#">Моноподы для селфи</a></li>
+							<li class="site-navigation-2nd-nesting-item"><a href="monopode.html">Моноподы для селфи</a></li>
 							<li class="site-navigation-2nd-nesting-item"><a href="#">Экшн-камеры</a></li>
 							<li class="site-navigation-2nd-nesting-item"><a href="#">Фитнес-браслеты</a></li>
 							<li class="site-navigation-2nd-nesting-item"><a href="#">Умные часы</a></li>
@@ -45,7 +46,8 @@
 			<div class="promo-slider-wrapper">
 				<h2 class="visually-hidden">Лучшие товары</h2>
 				<div class="promo-slider-slides promo-slide-1 show-promo-slide">
-					<img class="promo-slider-img" src="" alt="Крутой монопод">
+					<span class="promo-slider-number">01</span>
+					<img class="promo-slider-img" src="img/promo-slider-monopode.png" alt="Крутой монопод">
 					<section class="promo-slider-item-right-side">
 						<h3 class="promo-slider-item-heading">Делай селфи, как Бен Стиллер!</h3>
 						<p class="promo-slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -61,7 +63,8 @@
 					</section>
 				</div>
 				<div class="promo-slider-slides promo-slide-2">
-					<img class="promo-slider-img" src="" alt="Крутой фитнес-браслет">
+					<span class="promo-slider-number">02</span>
+					<img class="promo-slider-img" src="img/promo-slider-bracelet.png" alt="Крутой фитнес-браслет">
 					<section class="promo-slider-item-right-side">
 						<h3 class="promo-slider-item-heading">Худеем правильно!</h3>
 						<p class="promo-slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
@@ -73,7 +76,8 @@
 					</section>
 				</div>
 				<div class="promo-slider-slides promo-slide-3">
-					<img class="promo-slider-img" src="" alt="Крутой квадрокоптер">
+					<span class="promo-slider-number">03</span>
+					<img class="promo-slider-img" src="img/promo-slider-quadrocopter.png" alt="Крутой квадрокоптер">
 					<section class="promo-slider-item-right-side">
 						<h3 class="promo-slider-item-heading">Порхает как бабочка, жалит как пчела!</h3>
 						<p class="promo-slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
@@ -125,10 +129,18 @@
 			<div class="partners">
 				<h2 class="visually-hidden">Наши партнеры</h2>
 				<ul class="partners-list">
-					<li class="partners-list-item"><img src="" alt=""></li>
-					<li class="partners-list-item"><img src="" alt=""></li>
-					<li class="partners-list-item"><img src="" alt=""></li>
-					<li class="partners-list-item"><img src="" alt=""></li>
+					<li class="partners-list-item">
+						<a href="#"><img src="img/logo-dji.png" alt="Логотип компании DJI"></a>
+					</li>
+					<li class="partners-list-item">
+						<a href="#"><img src="img/logo-spgadgets.png" alt="Логотип компании SPGadgets"></a>
+					</li>
+					<li class="partners-list-item">
+						<a href="#"><img src="img/logo-gopro.png" alt="Логотип компании GoPro"></a>
+					</li>
+					<li class="partners-list-item">
+						<a href="#"><img src="img/logo-vive.png" alt="Логотип компании HTC Vive"></a>
+					</li>
 				</ul>
 			</div>
 			<div class="about-and-contacts-wrapper">
@@ -146,7 +158,7 @@
 				<section class="contacts">
 					<h2>Контакты</h2>
 					<p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-					<a class="map-btn" href="#"><img src="" alt=""></a>
+					<a class="map-btn" href="#"><img src="img/map.png" alt="Адрес магазина Device по адресу г. Санкт-Петербург, ул. Строителей, д. 15"></a>
 					<a class="button" href="#">Напишите нам</a>
 				</section>
 			</div>
@@ -155,7 +167,7 @@
 	<footer>
 		<div class="w-container">
 			<ul class="user-navigation-footer">
-				<li class="user-navigation-footer-item"><a class="footer-logo" href="#"><img src="" alt=""></a></li>
+				<li class="user-navigation-footer-item"><a class="footer-logo"><img src="img/main-logo-footer.svg" alt="Логотип Device"></a></li>
 				<li class="user-navigation-footer-item"><a href="#">Войти</a></li>
 				<li class="user-navigation-footer-item"><a href="#">Сравнить</a></li>
 				<li class="user-navigation-footer-item"><a href="#">Корзина</a></li>
@@ -173,7 +185,7 @@
 				<li class="social-list-item social-in"><a href="#"><span class="visually-hidden">Instagram</span></a></li>
 				<li class="social-list-item social-tw"><a href="#"><span class="visually-hidden">Twitter</span></a></li>
 			</ul>
-			<a href="#"><span class="visually-hidden">HTMLAcademy</span></a>
+			<a class="htmlacademy-link" href="#"><span class="visually-hidden">HTMLAcademy</span></a>
 		</div>
 	</footer>
 </body>
