--- a/monopode.html
+++ b/monopode.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Device: Моноподы для селфи</title>
@@ -46,7 +46,7 @@
 			<ul class="inner-page-navigation">
 				<li class="inner-page-navigation-item"><a href="#">Главная</a></li>
 				<li class="inner-page-navigation-item"><a href="#">Каталог товаров</a></li>
-				<li class="inner-page-navigation-item"><a class="current-in-inner-page" href="#">Моноподы для селфи</a></li>
+				<li class="inner-page-navigation-item"><a class="current-in-inner-page">Моноподы для селфи</a></li>
 			</ul>
 		</div>
 		<div class="filters-and-sorting-heading-wrapper">
@@ -54,11 +54,11 @@
 				<h2 class="filters-heading">Фильтры:</h2>
 				<h2 class="sorting-heading">Сортировка:</h2>
 				<ul class="sorting-list">
-					<li class="sorting-list-item"><a href="#">По цене</a></li>
+					<li class="sorting-list-item"><a class="current-in-sorting">По цене</a></li>
 					<li class="sorting-list-item"><a href="#">По типу</a></li>
 					<li class="sorting-list-item"><a href="#">По популярности</a></li>
-					<li class="sorting-list-item"><a href="#"><span class="visually-hidden">По возрастанию</span></a></li>
-					<li class="sorting-list-item"><a href="#"><span class="visually-hidden">По убыванию</span></a></li>
+					<li class="sorting-list-item"><a class="sorting-list-arrow-top" href="#"><span class="visually-hidden">По возрастанию</span></a></li>
+					<li class="sorting-list-item"><a class="sorting-list-arrow-bottom current-in-sorting-arrow"><span class="visually-hidden">По убыванию</span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -112,8 +112,8 @@
 							<img src="img/catalog-list-item-amateur.jpg" alt="Картинка любительской селфи-палки">
 							<span class="catalog-price">500 руб.</span>
 							<div class="catalog-item-options">
-								<button class="button">В корзину</button>
-								<button class="goto-match">Добавить к сравнению</button>
+								<button class="button" type="button">В корзину</button>
+								<button class="goto-match" type="button">Добавить к сравнению</button>
 							</div>
 						</li>
 						<li class="catalog-item">
@@ -121,8 +121,8 @@
 							<img src="img/catalog-list-item-pro.jpg" alt="Картинка профессиональной селфи-палки">
 							<span class="catalog-price">1 500 руб.</span>
 							<div class="catalog-item-options">
-								<button class="button">В корзину</button>
-								<button class="goto-match">Добавить к сравнению</button>
+								<button class="button" type="button">В корзину</button>
+								<button class="goto-match" type="button">Добавить к сравнению</button>
 							</div>
 						</li>
 						<li class="catalog-item">
@@ -130,8 +130,8 @@
 							<img src="img/catalog-list-item-unsink.jpg" alt="Картинка непотопляемой селфи-палки">
 							<span class="catalog-price">2 500 руб.</span>
 							<div class="catalog-item-options">
-								<button class="button">В корзину</button>
-								<button class="goto-match">Добавить к сравнению</button>
+								<button class="button" type="button">В корзину</button>
+								<button class="goto-match" type="button">Добавить к сравнению</button>
 							</div>
 						</li>
 						<li class="catalog-item">
@@ -139,8 +139,8 @@
 							<img src="img/catalog-list-item-follow.jpg" alt="Картинка селфи-палки Следуй за мной">
 							<span class="catalog-price">4 900 руб.</span>
 							<div class="catalog-item-options">
-								<button class="button">В корзину</button>
-								<button class="goto-match">Добавить к сравнению</button>
+								<button class="button" type="button">В корзину</button>
+								<button class="goto-match" type="button">Добавить к сравнению</button>
 							</div>
 						</li>
 					</ul>
