--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				<section class="contacts">
 					<h2>Контакты</h2>
 					<p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-					<a class="map-btn" href="#"><img src="img/map.png" alt="Адрес магазина Device по адресу г. Санкт-Петербург, ул. Строителей, д. 15"></a>
+					<a class="map-btn" href="#"><img src="img/map.png" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15"></a>
 					<a class="button" href="#">Напишите нам</a>
 				</section>
 			</div>
@@ -188,5 +188,31 @@
 			<a class="htmlacademy-link" href="#"><span class="visually-hidden">HTMLAcademy</span></a>
 		</div>
 	</footer>
+
+	<section class="popup-write-us">
+		<h2 class="visually-hidden">Форма обратной связи</h2>
+		<form class="form-write-us" action="https://echo.htmlacademy.ru" method="POST">
+			<ul class="write-us-list">
+				<li class="write-us-list-item">
+					<label for="write-us-name">Ваше имя:</label>
+					<input type="text" name="write-us-name" id="write-us-name" placeholder="Имя Фамилия">
+				</li>
+				<li class="write-us-list-item">
+					<label for="write-us-email">Ваш email:</label>
+					<input type="email" name="write-us-email" id="write-us-email" placeholder="email@example.com">
+				</li>
+				<li class="write-us-list-item">
+					<label for="write-us-text">Текст письма:</label>
+					<textarea name="write-us-text" id="write-us-text" cols="30" rows="10" placeholder="В свободной форме"></textarea>
+				</li>
+			</ul>
+			<button class="button" type="submit">Отправить</button>
+		</form>
+		<button class="close-btn" type="button"><span class="visually-hidden">Закрыть форму</span></button>
+	</section>
+	<div class="popup-map">
+		<img src="" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15">
+		<button class="close-btn" type="button"><span class="visually-hidden">Закрыть карту</span></button>
+	</div>
 </body>
 </html>
