Немного стилей для текста

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header class="main-header">
-		<div class="w-container">
+	<div class="w-container">
+		<header class="main-header">
 			<a class="header-logo"><img src="img/main-logo-header.svg" alt="Логотип Device"></a>
 			<nav class="main-navigation">
 				<form class="search-form" method="GET">
@@ -39,8 +39,8 @@
 					<li class="site-navigation-item"><a href="#">Контакты</a></li>
 				</ul>
 			</nav>
-		</div>
-	</header>
+		</header>
+	</div>
 	<main>
 		<div class="w-container">
 
@@ -110,9 +110,9 @@
 			<div class="w-container">
 				<h2 class="visually-hidden">Сервисы</h2>
 				<ul class="services-list">
-					<li class="services-list-item"><a class="current-in-services" href="#">Доставка</a></li>
-					<li class="services-list-item"><a href="#">Гарантия</a></li>
-					<li class="services-list-item"><a href="#">Кредит</a></li>
+					<li class="services-list-item"><a class="current-in-services button btn-services" href="#">Доставка</a></li>
+					<li class="services-list-item"><a class="button btn-services" href="#">Гарантия</a></li>
+					<li class="services-list-item"><a class="button btn-services" href="#">Кредит</a></li>
 				</ul>
 				<section class="services-slide services-delivery show-services-slide">
 					<h3 class="services-slide-heading">Доставка</h3>
@@ -151,7 +151,7 @@
 					<h2>О нас</h2>
 					<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
 					<p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-					<ul class="delivery-companies">
+					<ul class="delivery-companies-list">
 						<li>Деловые линии</li>
 						<li>Автотрейдинг</li>
 						<li>ЖелДорЭкспедиция</li>
@@ -167,7 +167,7 @@
 			</div>
 		</div>
 	</main>
-	<footer>
+	<footer class="main-footer">
 		<div class="w-container">
 			<ul class="user-navigation-footer">
 				<li class="user-navigation-footer-item"><a class="footer-logo"><img src="img/main-logo-footer.svg" alt="Логотип Device"></a></li>
