--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 		<button class="close-btn" type="button"><span class="visually-hidden">Закрыть форму</span></button>
 	</section>
 	<div class="popup-map">
-		<img src="" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15">
+		<img src="img/map-big.png" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15">
 		<button class="close-btn" type="button"><span class="visually-hidden">Закрыть карту</span></button>
 	</div>
 </body>
