--- a/monopode.html
+++ b/monopode.html
@@ -13,6 +13,7 @@
 			<a class="header-logo" href="index.html"><img src="img/main-logo-header.svg" alt="Логотип Device"></a>
 			<nav class="main-navigation">
 				<form class="search-form" method="GET">
+					<label class="search-icon" for="inpt-main-search"><span class="visually-hidden">Поиск</span></label>
 					<input class="main-search" name="inpt-main-search" type="search" placeholder="Поиск по сайту">
 					<button class="btn-search" type="submit">Найти</button>
 				</form>
@@ -39,7 +40,7 @@
 					<li class="site-navigation-item"><a href="#">Контакты</a></li>
 				</ul>
 			</nav>
-		</header>																																		
+		</header>
 	</div>
 	<main>
 		<div class="w-container">
@@ -172,7 +173,7 @@
 			</div>
 		</div>
 	</main>
-	<footer>
+	<footer class="main-footer">
 		<div class="w-container">
 			<ul class="user-navigation-footer footer-nav-when-logged">
 				<li class="user-navigation-footer-item"><a class="footer-logo" href="#"><img src="img/main-logo-footer.svg" alt="Логотип Device"></a></li>
